# GiveMeED

./: .gitattributes  .gitignore  AutoResolutionRings.s  CITATION.cff  ExportInSitu.s  GMED.py  GMED_installer.s  GiveMeED.s  GiveMeED_GUI.s  GiveMeED_noUI.s  GiveMeED_v1.0.s  GiveMeED_v1.0_GUI.s  Go2Alpha.s  README.md  data_reduction.py  export_IS_data.py  export_UI.py  export_UI.s  export_insitu.py  writePETS2import.py  writePETS2import_noUI.s  write_PETS2_import.py  write_PETS2_import_GUI.s
GMED_plugin/: gmed.gt1
export_insitu/: export_insitu.py  pyproject.toml
other_scripts/: AutoResolutionRings.s  AutoResolutionRings_GUI.s  AutoResolutionRings_noUI.s  GiveMeED_noUI.s  Go2Alpha.s
